--- a/public/scss/pages/_navbar.scss
+++ b/public/scss/pages/_navbar.scss
@@ -180,3 +180,13 @@
 // .active-color {
 //   background-color: red;
 // }
+@media (max-width: 767px) {
+  .profile-img {
+    display: none !important;
+  }
+}
+@media (max-width: 767px) {
+  .profile-img {
+    display: none !important;
+  }
+}
