--- a/public/scss/pages/_section.scss
+++ b/public/scss/pages/_section.scss
@@ -623,3 +623,14 @@
     margin: 0 auto;
   }
 }
+
+@media (max-width: 767px) {
+  .profile-img {
+    display: none !important;
+  }
+}
+@media (max-width: 767px) {
+  .profile-img {
+    display: none !important;
+  }
+}
