--- a/public/scss/main/_variable.scss
+++ b/public/scss/main/_variable.scss
@@ -12,7 +12,9 @@ body {
   --p2: 217, 236, 227;
   --n1: 255, 255, 255;
   --n11: 255, 255, 255;
-  --n2: 250, 250, 250;
+  //--n2: 250, 250, 250;
+  --n2: 245, 245, 255; // soft light-gray-purple
+
   --n3: 143, 143, 143;
   --n4: 79, 79, 79;
   --n41: 79, 79, 79;
